option('slash', type: 'boolean', value: false, description: 'Build slash (yields)', yield: true)
option('collector', type: 'boolean', value: false, description: 'Build collector')
option('vmem_fram', type: 'boolean', value: false, description: 'Build vmem fram')
option('have_fopen', type: 'boolean', value: false, description: 'POSIX fopen available')
option('list_dynamic', type: 'boolean', value: false, description: 'Compile support for dynamic param list (requres sys/queue.h) and dynamic memory allocation')
option('list_pool', type: 'integer', value: 0, description: 'Compile support for pre-allocated param list (requres sys/queue.h)')
option('scheduler', type: 'boolean', value: false, description: 'Build scheduler server')
option('commands', type: 'boolean', value: false, description: 'Build command server')
option('scheduler_client', type: 'boolean', value: false, description: 'Build scheduler client')
option('commands_client', type: 'boolean', value: false, description: 'Build command client')
option('have_float', type: 'boolean', value: true, description: 'Support float/double')