option('collector', type: 'boolean', value: false, description: 'Build collector')
option('vmem_fram', type: 'boolean', value: false, description: 'Build vmem fram')
option('have_fopen', type: 'boolean', value: false, description: 'POSIX fopen available')
option('list_dynamic', type: 'boolean', value: false, description: 'Compile support for dynamic param list (requres sys/queue.h) and dynamic memory allocation')
option('list_pool', type: 'integer', value: 0, description: 'Compile support for pre-allocated param list (requres sys/queue.h)')
option('have_float', type: 'boolean', value: true, description: 'Support float/double')
option('num_publishqueues', type: 'integer', value: 0, description: 'Number of param publish queues required')
option('serialize_extended_timestamp', type: 'boolean', value: false, description: 'Include ns part of timestamps when serializing parameters (network incompatible with libparam older than June 2025')
